--- a/public/draw.html
+++ b/public/draw.html
@@ -105,8 +105,7 @@
 
     var socket = io.connect();
 
-    var users = {}, mouseX = 0, mouseY = 0, oldMouseX = 0, oldMouseY = 0, mouseDown = false;
-    var user_id;
+    var mouseX = 0, mouseY = 0, oldMouseX = 0, oldMouseY = 0, mouseDown = false;
 
     var colors = ['0,0,0', '255,255,255', '28,83,237', '237,28,36','39,200,7'];
 
@@ -121,26 +120,6 @@
     canvas.height = CANVAS_HEIGHT;
 
     var context = canvas.getContext( '2d' );
-
-    socket.on('user connected', function(data){
-        addUser( data.userid.toString() );
-    });
-
-    socket.on('user', function(data){
-        user_id = data.userid;
-    });
-
-    socket.on('userlist', function (data) {
-        data.forEach(addUser);
-    });
-
-    socket.on('user disconnected', function(data){
-        removeUser( data.userid );
-    });
-
-    socket.on('color', function(data){
-        users[ data.userid ].color = parseInt( data.color );
-    });
 
     socket.on('clear', function () {
         clearCanvas();
@@ -161,7 +140,7 @@
         mouseDown = true;
         mouseX = event.clientX - canvas.offsetLeft;
         mouseY = event.clientY - canvas.offsetTop;
-        socket.emit('draw', {userid: user_id, x:mouseX, y: mouseY});
+        socket.emit('draw', { x: mouseX, y: mouseY, color: COLOR });
     }
 
     function inputUp() {
@@ -176,7 +155,7 @@
 
         if ( mouseDown ) {
             draw( oldMouseX, oldMouseY, mouseX, mouseY, COLOR );
-            socket.emit('draw', { userid: user_id, x: mouseX, y: mouseY, color: COLOR });
+            socket.emit('draw', { x: mouseX, y: mouseY, color: COLOR });
         }
     }
 
@@ -190,16 +169,7 @@
     window.document.addEventListener('touchmove', function (event) { inputMove(event.touches[0]); });
 
     function remoteDrawHandler(data){
-        var user = users[ data.userid ];
-
-        if (!user) return;
-
-        if (!user.x) user.x = data.x;
-        if (!user.y) user.y = data.y;
-
-        draw( user.x, user.y, data.x, data.y, data.color );
-        user.x = data.x;
-        user.y = data.y;
+        draw( data.x, data.y, data.x, data.y, data.color );
     }
 
     socket.on('draw', remoteDrawHandler);
@@ -210,24 +180,6 @@
             remoteDrawHandler(d);
         });
     });
-
-    function addUser( id ) {
-        console.log('adduser', id);
-
-        var user = {
-            idColor: Math.floor( Math.random() * 128 + 32 ) + ',' + Math.floor( Math.random() * 128 + 32 ) + ',' + Math.floor( Math.random() * 128 + 32 ),
-            x: 0,
-            y: 0,
-            color: 0,
-            mouseDown: false
-        };
-
-        users[ id ] = user;
-    }
-
-    function removeUser( id ) {
-        delete users[ id ];
-    }
 
     function draw( x1, y1, x2, y2, color ) {
         var dx  = x2 - x1,
