Implement the flow with fake delays

--- a/public/setup.html
+++ b/public/setup.html
@@ -19,7 +19,7 @@
 
 <script type="text/javascript">
 
-    delete localStorage.place;
+    delete localStorage.client;
     window.location.href = '/index.html';
 
 </script>
