--- a/public/draw.html
+++ b/public/draw.html
@@ -78,6 +78,29 @@
                 border: 2px solid #ddd;
             }
 
+            .modal-dialog {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: rgba(256, 256, 256, 0.5);
+            }
+
+            .modal-dialog-content {
+                background-color: white;
+                padding: 10px;
+                border-radius: 10px;
+                border: 1px solid #ddd;
+            }
+
+            .hidden {
+                display: none !important;
+            }
+
         </style>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript" charset="utf-8"></script>
     </head>
@@ -93,15 +116,29 @@
         </div>
 
         <div class="controls panel">
-            <div class="button" id="clearButton">Clear</div>
-            <div class="button" id="saveButton">Save</div>
+            <!-- <div class="button" id="clearButton">Clear</div> -->
+            <div class="button" id="doneButton">Done</div>
+        </div>
+
+        <div class="modal-dialog hidden" id="doneDialog">
+            <div class="modal-dialog-content">
+                Waiting for partner to be done...
+            </div>
+        </div>
+
+        <div class="modal-dialog hidden" id="printingDialog">
+            <div class="modal-dialog-content">
+                Printing in progress...
+            </div>
         </div>
         
 <script src="/socket.io/socket.io.js"></script>
 <script type="text/javascript">
 
-    var place = localStorage.place;
-    if (!place) window.location.href = '/index.html';
+    var client = localStorage.client;
+    if (!client) window.location.href = '/index.html';
+
+    console.log('This is client ' + client);
 
     var socket = io.connect();
 
@@ -115,19 +152,13 @@
     var COLOR = 0;
     var BRUSH = 0;
 
+    var done = false;
+
     var canvas = document.getElementById( 'canvas' );
     canvas.width = CANVAS_WIDTH;
     canvas.height = CANVAS_HEIGHT;
 
     var context = canvas.getContext( '2d' );
-
-    socket.on('clear', function () {
-        clearCanvas();
-    });
-
-    socket.on('close', function(){
-        addServerMessage( 'Disconnected :/' );
-    });
 
     function clearCanvas() {
         context.lineWidth = 0.3;
@@ -172,11 +203,36 @@
         draw( data.x, data.y, data.x, data.y, data.color );
     }
 
+    socket.on('clear', function () {
+        clearCanvas();
+    });
+
+    socket.on('close', function(){
+        addServerMessage( 'Disconnected :/' );
+    });
+
+    socket.on('printing', function (data) {
+        console.log('Now printing...', data);
+        document.getElementById('doneDialog').classList.add('hidden');
+        document.getElementById('printingDialog').classList.remove('hidden');
+    });
+
+    socket.on('reset', function (data) {
+        console.log('All done, reset state.', data);
+        clearCanvas();
+        document.getElementById('doneDialog').classList.add('hidden');
+        document.getElementById('printingDialog').classList.add('hidden');
+        done = false;
+    });
+
     socket.on('draw', remoteDrawHandler);
 
     socket.on('init', function (data) {
         console.log('init client', data);
-        data.forEach(function (d) {
+
+        done = data.state[client].done;
+
+        data.strokes.forEach(function (d) {
             remoteDrawHandler(d);
         });
     });
@@ -221,14 +277,15 @@
         });
     });
 
-    document.getElementById('clearButton').addEventListener('click', function () {
-        clearCanvas();
-        socket.emit('clear');
-    });
+    // document.getElementById('clearButton').addEventListener('click', function () {
+    //     clearCanvas();
+    //     socket.emit('clear');
+    // });
 
-    document.getElementById('saveButton').addEventListener('click', function () {
-        socket.emit('save');
-        alert('wohoo saved!');
+    document.getElementById('doneButton').addEventListener('click', function () {
+        console.log('Now done...');
+        document.getElementById('doneDialog').classList.remove('hidden');
+        socket.emit('done', { client: client });
     });
 
 </script>
