--- a/public/index.html
+++ b/public/index.html
@@ -36,26 +36,26 @@
 <body>
 
 <div class="container">
-    <div class="location" id="place1Button">Hauptstr.</div>
-    <div class="location" id="place2Button">Potsdamer Platz</div>
+    <div class="location" id="clientAButton">A</div>
+    <div class="location" id="clientBButton">B</div>
 </div>
 
 <script type="text/javascript">
 
-    var place = localStorage.place;
-    if (place) window.location.href = '/draw.html';
+    var client = localStorage.client;
+    if (client) window.location.href = '/draw.html';
 
-    function selectPlace(place) {
-        localStorage.place = place;
+    function selectClient(client) {
+        localStorage.client = client;
         window.location.href = '/draw.html';
     }
 
-    document.getElementById('place1Button').addEventListener('click', function () {
-        selectPlace(1);
+    document.getElementById('clientAButton').addEventListener('click', function () {
+        selectClient('a');
     });
 
-    document.getElementById('place2Button').addEventListener('click', function () {
-        selectPlace(2);
+    document.getElementById('clientBButton').addEventListener('click', function () {
+        selectClient('b');
     });
 
 </script>
