Set color and brush defaults

--- a/public/draw.html
+++ b/public/draw.html
@@ -285,8 +285,8 @@
     var CANVAS_WIDTH = 1024;
     var CANVAS_HEIGHT = 768;
 
-    var COLOR = 0;
-    var BRUSH = 0;
+    var COLOR = client === 'a' ? 11 : 21;
+    var BRUSH = 10;
 
     var done = false;
 
